--- a/files/e8eb67eb3bd67b0975d3e59452d11594.css
+++ b/files/e8eb67eb3bd67b0975d3e59452d11594.css
@@ -31784,9 +31784,9 @@ section {
     margin-right: auto
 }
 
-/* .subtext.subtext--lined.subtext__left:after {
+.subtext.subtext--lined.subtext__left:after {
     margin-left: 0
-} */
+}
 
 .subtext.subtext__left {
     text-align: left
@@ -33661,6 +33661,7 @@ header .header__phone .phone__link:hover .link__icon i {
     font-size: 18px;
     color: #33475b;
     padding: 15px;
+    padding-left: 66px;
     background: #fff;
     border-radius: 0;
     border: 0;
@@ -35061,6 +35062,7 @@ footer .footer__content .footer__copyright a:hover {
     font-size: 18px;
     color: #33475b;
     padding: 15px;
+    padding-left: 66px;
     background: 0 0;
     border-radius: 0;
     border: 0;
@@ -40207,12 +40209,12 @@ te-post-service-big #trust .wac .logotypes__list {
 }
 
 .home-time-list li:first-of-type::after {
-    content: '';
+    content: 'OR';
     display: flex;
     align-items: center;
     justify-content: center;
     background: #F5F8FA;
-    border-left: 1px solid rgba(51, 71, 91, .12);
+    border: 1px solid rgba(51, 71, 91, .12);
     border-radius: 32px;
     width: 48px;
     height: 48px;
@@ -42647,11 +42649,12 @@ img {
         display: none
     }
 
-    /* .content__form form .form__input input,
+    .content__form form .form__input input,
     .content__form form .form__input textarea,
     .modal__form form .form__input input,
     .modal__form form .form__input textarea {
-    } */
+        padding-left: 46px
+    }
 
     .content__form form .form__input .input__icon,
     .modal__form form .form__input .input__icon {
